--- a/chokotei_report.html
+++ b/chokotei_report.html
@@ -152,23 +152,19 @@
             gap: 0;
         }
 
-        .input-left {
+        .inp-col {
             flex: 1;
-            height: 100%;
-            background: var(--surface2);
-            border-right: 1px solid var(--border);
-            display: flex;
-            flex-direction: column;
-            overflow: hidden;
-        }
-
-        .input-right {
-            flex: 1;
+            min-width: 0;
             min-height: 0;
             display: flex;
             flex-direction: column;
             overflow: hidden;
+            border-right: 1px solid var(--border);
+            background: var(--surface);
         }
+        .inp-col:first-child { background: var(--surface2); }
+        .inp-col:last-child { border-right: none; }
+        .inp-col-save { background: var(--surface) !important; }
 
         .panel-header {
             padding: 14px 16px;
@@ -255,18 +251,7 @@
         }
 
         /* ===== RIGHT PANEL (INPUT) ===== */
-        .input-form-area {
-            flex: 1;
-            min-height: 0;
-            padding: 16px;
-            display: flex;
-            flex-direction: column;
-            gap: 12px;
-            overflow-y: auto;
-        }
 
-        .input-form-area::-webkit-scrollbar { width: 4px; }
-        .input-form-area::-webkit-scrollbar-thumb { background: var(--surface3); border-radius: 2px; }
 
         .form-row {
             display: grid;
@@ -998,30 +983,24 @@
                 flex-direction: column;
                 overflow-y: auto;
                 overflow-x: hidden;
-                padding-bottom: 0;
             }
 
-            .input-left {
-                width: 100%;
+            .inp-col {
                 flex: none;
+                width: 100%;
                 height: auto;
                 border-right: none;
                 border-bottom: 2px solid #c8d0ef;
-            }
-
-            .input-left .panel-body {
                 overflow: visible;
-                max-height: none;
             }
 
-            .input-right {
-                flex: none;
-                width: 100%;
-                height: auto;
-            }
-
-            .input-form-area {
+            .inp-col .panel-body {
                 overflow: visible;
+            }
+
+            .inp-col-save {
+                border-bottom: none;
+                padding-bottom: 0;
             }
 
             .save-bar {
@@ -1035,10 +1014,6 @@
 
             .btn-grid {
                 grid-template-columns: repeat(2, 1fr);
-            }
-
-            #organization-no-buttons {
-                grid-template-columns: repeat(3, 1fr) !important;
             }
 
             /* ===== VIEW (mobile) ===== */
@@ -1182,6 +1157,24 @@
         @media (max-width: 900px) {
             :root { --left-w: 280px; }
         }
+
+        .rec-del-btn {
+            padding: 5px 12px;
+            border: 2px solid rgba(255,77,77,0.5);
+            border-radius: 6px;
+            background: transparent;
+            color: var(--accent2);
+            font-family: 'M PLUS 1', sans-serif;
+            font-size: 12px;
+            font-weight: 700;
+            cursor: pointer;
+            white-space: nowrap;
+            transition: all 0.15s;
+        }
+        .rec-del-btn:hover {
+            background: rgba(255,77,77,0.1);
+            border-color: var(--accent2);
+        }
     </style>
 </head>
 <body>
@@ -1227,46 +1220,43 @@
         <!-- ===== INPUT SECTION ===== -->
         <div id="input-section" class="section active">
 
-            <!-- LEFT: operator + equipment + anomaly -->
-            <div class="input-left">
-                <div class="panel-header">処置者 / 設備 / 異常</div>
+            <!-- COL 1: 処置者 + 設備名 -->
+            <div class="inp-col">
+                <div class="panel-header">処置者 / 設備名</div>
                 <div class="panel-body">
                     <span class="form-label">処置者</span>
                     <div id="operator-buttons" class="btn-grid"></div>
-
                     <span class="form-label">設備名</span>
                     <div id="equipment-buttons" class="btn-grid"></div>
+                </div>
+            </div>
 
-                    <div id="anomaly-section" class="hidden">
+            <!-- COL 2: 異常名 + 整理No -->
+            <div class="inp-col">
+                <div class="panel-header">異常名 / 整理 No</div>
+                <div class="panel-body">
+                    <div id="anomaly-section">
                         <span class="form-label">異常名</span>
                         <div id="anomaly-buttons" class="btn-grid"></div>
+                    </div>
+                    <div id="organization-no-section" class="hidden">
+                        <span class="form-label">整理 No</span>
+                        <div id="organization-no-buttons" class="btn-grid" style="grid-template-columns: repeat(3,1fr);"></div>
                     </div>
                 </div>
             </div>
 
-            <!-- RIGHT: orgno + optional + remarks + save -->
-            <div class="input-right">
-                <div class="input-form-area">
-                    <div id="organization-no-section" class="hidden">
-                        <div class="form-box">
-                            <div class="panel-header">整理 No</div>
-                            <div id="organization-no-buttons" class="btn-grid" style="padding:10px; grid-template-columns: repeat(4,1fr);"></div>
-                        </div>
-                    </div>
-
+            <!-- COL 3: オプション + 備考 + 保存 -->
+            <div class="inp-col inp-col-save">
+                <div class="panel-header">オプション / 備考</div>
+                <div class="panel-body">
                     <div id="optional-fields-section" class="hidden">
-                        <div class="form-box">
-                            <div class="panel-header">オプション項目</div>
-                            <div id="optional-fields-container" class="opt-select-wrap"></div>
-                        </div>
+                        <span class="form-label">オプション項目</span>
+                        <div id="optional-fields-container" class="opt-select-wrap" style="padding:0;"></div>
                     </div>
-
-                    <div>
-                        <div class="form-label" style="margin-top:0;">備考（任意）</div>
-                        <textarea id="remarks" class="input-field" placeholder="備考を入力してください…"></textarea>
-                    </div>
+                    <span class="form-label">備考（任意）</span>
+                    <textarea id="remarks" class="input-field" placeholder="備考を入力してください…" style="height:80px;"></textarea>
                 </div>
-
                 <div class="save-bar">
                     <button class="btn-save" onclick="saveRecord()">💾　保存する</button>
                 </div>
@@ -1918,14 +1908,14 @@
                     if (r.date >= startDate && r.date <= endDate) {
                         const ma = !currentFilterAnomaly || r.anomalyName === currentFilterAnomaly;
                         const mo = !currentFilterOrganizationNo || r.organizationNo === currentFilterOrganizationNo;
-                        if (ma && mo) records.push(r);
+                        if (ma && mo) records.push({ _key: c.key, ...r });
                     }
                 });
                 records.sort((a, b) => b.timestamp.localeCompare(a.timestamp));
                 const tbody = document.getElementById('records-tbody');
                 tbody.innerHTML = '';
                 if (records.length === 0) {
-                    tbody.innerHTML = `<tr><td colspan="6" class="no-data">該当データなし</td></tr>`;
+                    tbody.innerHTML = '<tr><td colspan="7" class="no-data">該当データなし</td></tr>';
                     return;
                 }
                 records.forEach(r => {
@@ -1934,17 +1924,31 @@
                         optText = Object.values(r.optionalData).join(' / ');
                     }
                     const tr = document.createElement('tr');
-                    tr.innerHTML = `
-                        <td>${r.date} ${r.time}</td>
-                        <td>${r.anomalyName}</td>
-                        <td>${r.organizationNo || '-'}</td>
-                        <td>${optText}</td>
-                        <td>${r.operator}</td>
-                        <td>${r.remarks || ''}</td>
-                    `;
+                    const key = r._key;
+                    tr.innerHTML =
+                        '<td>' + r.date + ' ' + r.time + '</td>' +
+                        '<td>' + r.anomalyName + '</td>' +
+                        '<td>' + (r.organizationNo || '-') + '</td>' +
+                        '<td>' + optText + '</td>' +
+                        '<td>' + r.operator + '</td>' +
+                        '<td>' + (r.remarks || '') + '</td>' +
+                        '<td><button class="rec-del-btn" onclick="deleteRecord(this, '' + key + '')">削除</button></td>';
                     tbody.appendChild(tr);
                 });
             });
+        }
+
+        function deleteRecord(btn, key) {
+            if (!confirm('この履歴を削除しますか？\nこの操作は元に戻せません。')) return;
+            database.ref('records/' + key).remove().then(() => {
+                const tr = btn.closest('tr');
+                tr.style.transition = 'opacity 0.3s';
+                tr.style.opacity = '0';
+                setTimeout(() => tr.remove(), 300);
+                showToast('🗑 履歴を削除しました');
+                updateChart();
+                loadStats();
+            }).catch(e => alert('削除失敗: ' + e.message));
         }
 
         function buildCSV(records) {
