--- a/chokotei_report.html
+++ b/chokotei_report.html
@@ -1932,7 +1932,7 @@
                         '<td>' + optText + '</td>' +
                         '<td>' + r.operator + '</td>' +
                         '<td>' + (r.remarks || '') + '</td>' +
-                        '<td><button class="rec-del-btn" onclick="deleteRecord(this, '' + key + '')">削除</button></td>';
+                        '<td><button class="rec-del-btn" onclick="deleteRecord(this, \'' + key + '\')">削除</button></td>';
                     tbody.appendChild(tr);
                 });
             });
