--- a/chokotei_report.html
+++ b/chokotei_report.html
@@ -311,8 +311,8 @@
         }
 
         .btn-save {
-            flex: 1;
-            padding: 14px;
+            width: 100%;
+            padding: 16px;
             background: linear-gradient(135deg, #4a7eff 0%, #6a5aff 100%);
             border: none;
             border-radius: var(--radius);
@@ -1003,15 +1003,6 @@
                 padding-bottom: 0;
             }
 
-            .save-bar {
-                position: sticky;
-                bottom: 0;
-                background: var(--surface);
-                z-index: 10;
-                border-top: 2px solid #c8d0ef;
-                padding-bottom: calc(12px + env(safe-area-inset-bottom, 0));
-            }
-
             .btn-grid {
                 grid-template-columns: repeat(2, 1fr);
             }
@@ -1256,9 +1247,7 @@
                     </div>
                     <span class="form-label">備考（任意）</span>
                     <textarea id="remarks" class="input-field" placeholder="備考を入力してください…" style="height:80px;"></textarea>
-                </div>
-                <div class="save-bar">
-                    <button class="btn-save" onclick="saveRecord()">💾　保存する</button>
+                    <button class="btn-save" onclick="saveRecord()" style="margin-top:16px;">💾　保存する</button>
                 </div>
             </div>
         </div>
