--- a/chokotei_report.html
+++ b/chokotei_report.html
@@ -294,9 +294,10 @@
 
         /* ===== MINI CHART (Input Screen) ===== */
         .input-mini-chart {
-            flex-shrink: 0;
-            border-top: 1px solid var(--border);
-            background: #f8faff;
+            margin-top: 14px;
+            background: #f0f4ff;
+            border: 1px solid #c8d0ef;
+            border-radius: 10px;
             padding: 10px 12px;
             display: flex;
             flex-direction: column;
@@ -992,6 +993,18 @@
                     <div id="operator-buttons" class="btn-grid"></div>
                     <span class="form-label">設備名</span>
                     <div id="equipment-buttons" class="btn-grid"></div>
+
+                    <!-- ミニグラフ (設備選択時に表示) -->
+                    <div id="input-mini-chart" class="input-mini-chart hidden">
+                        <div class="mini-chart-header">
+                            <div class="mini-chart-title">📈 直近7日間の異常件数</div>
+                            <div class="mini-chart-equip-name" id="mini-chart-equip-name"></div>
+                        </div>
+                        <div class="mini-chart-wrap">
+                            <canvas id="mini-trend-chart"></canvas>
+                        </div>
+                        <div class="mini-chart-total">7日合計：<span id="mini-chart-total">0</span> 件</div>
+                    </div>
                 </div>
             </div>
 
@@ -1023,17 +1036,6 @@
                     <button class="btn-save" onclick="saveRecord()" style="margin-top:16px;">💾　保存する</button>
                 </div>
 
-                <!-- ミニグラフ (設備選択時に表示) -->
-                <div id="input-mini-chart" class="input-mini-chart hidden">
-                    <div class="mini-chart-header">
-                        <div class="mini-chart-title">📈 直近7日間の異常件数</div>
-                        <div class="mini-chart-equip-name" id="mini-chart-equip-name"></div>
-                    </div>
-                    <div class="mini-chart-wrap">
-                        <canvas id="mini-trend-chart"></canvas>
-                    </div>
-                    <div class="mini-chart-total">7日合計：<span id="mini-chart-total">0</span> 件</div>
-                </div>
             </div>
         </div>
 
