--- a/ijoukannri.html
+++ b/ijoukannri.html
@@ -631,7 +631,7 @@ els.tbody.addEventListener('click',async e=>{
     const key=openBtn.dataset.open;
     const r=lastResult.find(x=>x.serialKey===key);if(!r)return;
     const newest=[...r.items].sort((a,b)=>(toDate(b.occurrenceDate)||new Date(0))-(toDate(a.occurrenceDate)||new Date(0)))[0];
-    window.open('abnreport.html?focusAnomalyId='+encodeURIComponent(newest?._id||''),'_blank');
+    window.open('abnreports.html?focusAnomalyId='+encodeURIComponent(newest?._id||''),'_blank');
     return;
   }
 
