--- a/seizouqrmb.html
+++ b/seizouqrmb.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -1007,7 +1006,7 @@ const BUSHO_KEY = "qr_busho_name";
 
 /* ================== 2度読み対策 ================== */
 let lastScanTime = 0;
-const SCAN_COOLDOWN_MS = 1500; // 1.5秒クールダウン
+const SCAN_COOLDOWN_MS = 3000; // 3秒クールダウン
 let cooldownTimer = null;
 
 const $cooldownBar = document.getElementById("cooldownBar");
@@ -1743,9 +1742,9 @@ window.addEventListener("load", ()=>{
 });
 
 async function processQR(qrRaw){
-  // ===== 2度読み対策：クールダウンチェック =====
+  // ===== 2度読み対策：クールダウンチェック（ロック中はスキップ） =====
   const now_ms = Date.now();
-  if(now_ms - lastScanTime < SCAN_COOLDOWN_MS){
+  if(!isLocked && now_ms - lastScanTime < SCAN_COOLDOWN_MS){
     const remaining = Math.ceil((SCAN_COOLDOWN_MS - (now_ms - lastScanTime)) / 1000);
     updateDebugLog(`⏳ クールダウン中 (残${remaining}秒) スキップ`);
     buffer = "";
@@ -1814,9 +1813,8 @@ async function processQR(qrRaw){
   }
 
   // ここに来たものだけ「正常に受け付けた」とみなす
-  lastScanTime = Date.now(); // ★ 2度読み対策：タイムスタンプ更新
   lastSlicedLength = sliced.length;
-  startCooldownUI();          // ★ クールダウンUI開始
+  // ※ lastScanTime / startCooldownUI は OK/NG 判定後に個別に設定する
   // === /欠損対策 ===
   
   if (baseQR && !isLocked && prodStatus !== PROD_STATUS.RUNNING) {
@@ -1893,6 +1891,8 @@ async function processQR(qrRaw){
   let deltaGood = 0;
   
   if(judgedOK){
+    lastScanTime = Date.now(); // 2度読み対策
+    startCooldownUI();
     showOK();
     deltaGood = (qtyPerKanban != null && qtyPerKanban > 0) ? qtyPerKanban : 1;
     goodCount += deltaGood;
